Se establecio la ruta predeterminada de listar elementos

--- a/formulario/applications/home/templates/mostrar_datos.html
+++ b/formulario/applications/home/templates/mostrar_datos.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <!-- Título y botón alineados -->
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1 class="m-0">Lista de Pruebas</h1>
+            <h1 class="m-0">Lista</h1>
             <a href="{% url 'crear' %}" class="btn btn-success">
                 ➕ Crear nuevo
             </a>
