--- a/formulario/applications/home/templates/crear_datos.html
+++ b/formulario/applications/home/templates/crear_datos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Crear Prueba</title>
+    <title>Crear</title>
 
     <!-- Bootstrap 5 CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -65,7 +65,7 @@
 
     <div class="container mt-5 d-flex justify-content-center">
         <div class="shadow p-5 bg-white rounded" style="width: 100%; max-width: 600px;">
-            <h1 class="mb-5 text-center">Crear Nueva Prueba</h1>
+            <h1 class="mb-5 text-center">Crear Nuevo</h1>
 
             <form method="post">
                 {% csrf_token %} {{ form.as_p }}
