--- a/formulario/applications/home/templates/editar_datos.html
+++ b/formulario/applications/home/templates/editar_datos.html
@@ -60,7 +60,7 @@
 
     <div class="container mt-5 d-flex justify-content-center">
         <div class="shadow p-5 bg-white rounded" style="width: 100%; max-width: 600px;">
-            <h1 class="mb-5 text-center">Editar Prueba</h1>
+            <h1 class="mb-5 text-center">Editar</h1>
 
             <form method="post">
                 {% csrf_token %} {{ form.as_p }}
